--- a/Source/CP.i8n/CommonStrings.tr.resx
+++ b/Source/CP.i8n/CommonStrings.tr.resx
@@ -91,6 +91,10 @@
 		<value>Uygulama Ayarları</value>
 	</data>
 
+	<data name="Brushed" xml:space="preserve">
+		<value>Brushed</value>
+	</data>
+
 	<data name="CancelPurchaseOrder" xml:space="preserve">
 		<value>Siparişi İptal Et</value>
 	</data>
@@ -107,8 +111,16 @@
 		<value>Ad</value>
 	</data>
 
+	<data name="Folded" xml:space="preserve">
+		<value>Katlanmış</value>
+	</data>
+
 	<data name="FullName" xml:space="preserve">
 		<value>Tam İsim</value>
+	</data>
+
+	<data name="Hanging" xml:space="preserve">
+		<value>Askıda</value>
 	</data>
 
 	<data name="Home" xml:space="preserve">
@@ -129,6 +141,10 @@
 
 	<data name="Setup" xml:space="preserve">
 		<value>Kurulum</value>
+	</data>
+
+	<data name="Unbrushed" xml:space="preserve">
+		<value>Unbrushed</value>
 	</data>
 
 	<data name="User" xml:space="preserve">
