--- a/Source/CP.i8n/EntityStrings.Resx
+++ b/Source/CP.i8n/EntityStrings.Resx
@@ -384,15 +384,27 @@
 	</data>
 
 	<data name="BuyingCurrency" xml:space="preserve">
-		<value>Factory Currency</value>
+		<value>Buying Currency</value>
+	</data>
+
+	<data name="BuyingCurrency2" xml:space="preserve">
+		<value>Buying Currency 2nd</value>
+	</data>
+
+	<data name="BuyingCurrency2Id" xml:space="preserve">
+		<value>Buying Currency 2nd</value>
 	</data>
 
 	<data name="BuyingCurrencyId" xml:space="preserve">
-		<value>Factory Currency</value>
+		<value>Buying Currency</value>
 	</data>
 
 	<data name="BuyingPrice" xml:space="preserve">
-		<value>Factory Price</value>
+		<value>Buying Price</value>
+	</data>
+
+	<data name="BuyingPrice2" xml:space="preserve">
+		<value>Buying Price 2nd</value>
 	</data>
 
 	<data name="CancelDate" xml:space="preserve">
@@ -441,6 +453,10 @@
 
 	<data name="City" xml:space="preserve">
 		<value>City</value>
+	</data>
+
+	<data name="Colour" xml:space="preserve">
+		<value>Colour</value>
 	</data>
 
 	<data name="Companies" xml:space="preserve">
@@ -943,6 +959,10 @@
 		<value>Employees List</value>
 	</data>
 
+	<data name="FabricComposition" xml:space="preserve">
+		<value>Fabric Composition</value>
+	</data>
+
 	<data name="FirstName" xml:space="preserve">
 		<value>First Name</value>
 	</data>
@@ -1431,8 +1451,20 @@
 		<value>Selling Currency</value>
 	</data>
 
+	<data name="SellingCurrency2" xml:space="preserve">
+		<value>Selling Currency2</value>
+	</data>
+
+	<data name="SellingCurrency2Id" xml:space="preserve">
+		<value>Selling Currency2Id</value>
+	</data>
+
 	<data name="SellingCurrencyId" xml:space="preserve">
 		<value>Selling Currency</value>
+	</data>
+
+	<data name="ShipmentHangingFolded" xml:space="preserve">
+		<value>Shipment Hanging Folded</value>
 	</data>
 
 	<data name="SizeRatio" xml:space="preserve">
@@ -1553,6 +1585,10 @@
 
 	<data name="UnitPrice" xml:space="preserve">
 		<value>Unit Price</value>
+	</data>
+
+	<data name="UnitPrice2" xml:space="preserve">
+		<value>Unit Price2</value>
 	</data>
 
 	<data name="UserName" xml:space="preserve">
