New data model elements implemented to PurchaseOrder's Views

--- a/Source/CP.i8n/CommonStrings.resx
+++ b/Source/CP.i8n/CommonStrings.resx
@@ -131,6 +131,10 @@
 		<value>Last Name</value>
 	</data>
 
+	<data name="NotPicked" xml:space="preserve">
+		<value>Not Picked</value>
+	</data>
+
 	<data name="Record" xml:space="preserve">
 		<value>Record</value>
 	</data>
