--- a/Source/CP.i8n/CommonStrings.tr.resx
+++ b/Source/CP.i8n/CommonStrings.tr.resx
@@ -131,6 +131,10 @@
 		<value>Soyad</value>
 	</data>
 
+	<data name="NotPicked" xml:space="preserve">
+		<value>Seçilmemiş</value>
+	</data>
+
 	<data name="Record" xml:space="preserve">
 		<value>Kayıt</value>
 	</data>
