--- a/Source/CP.i8n/EntityStrings.tr.Resx
+++ b/Source/CP.i8n/EntityStrings.tr.Resx
@@ -1464,7 +1464,7 @@
 	</data>
 
 	<data name="ShipmentHangingFolded" xml:space="preserve">
-		<value>Taşıma Askıda / Katlanmış</value>
+		<value>Nakliye Askıda / Katlanmış</value>
 	</data>
 
 	<data name="SizeRatio" xml:space="preserve">
