--- a/Source/CP.i8n/CommonStrings.resx
+++ b/Source/CP.i8n/CommonStrings.resx
@@ -103,8 +103,24 @@
 		<value>Contact Us</value>
 	</data>
 
+	<data name="CurrentImage" xml:space="preserve">
+		<value>Current Image</value>
+	</data>
+
 	<data name="Email" xml:space="preserve">
 		<value>Email</value>
+	</data>
+
+	<data name="FileModifyDate" xml:space="preserve">
+		<value>File Modify Date</value>
+	</data>
+
+	<data name="FileName" xml:space="preserve">
+		<value>File Name</value>
+	</data>
+
+	<data name="FileSize" xml:space="preserve">
+		<value>File Size</value>
 	</data>
 
 	<data name="FirstName" xml:space="preserve">
@@ -131,12 +147,20 @@
 		<value>Last Name</value>
 	</data>
 
+	<data name="NoFilesSelected" xml:space="preserve">
+		<value>No Files Selected!</value>
+	</data>
+
 	<data name="NotPicked" xml:space="preserve">
 		<value>Not Picked</value>
 	</data>
 
 	<data name="Record" xml:space="preserve">
 		<value>Record</value>
+	</data>
+
+	<data name="SelectedNewImage" xml:space="preserve">
+		<value>Selected New Image</value>
 	</data>
 
 	<data name="Settings" xml:space="preserve">
