--- a/Source/CP.i8n/CommonStrings.tr.resx
+++ b/Source/CP.i8n/CommonStrings.tr.resx
@@ -103,8 +103,24 @@
 		<value>Bize Ulaşın</value>
 	</data>
 
+	<data name="CurrentImage" xml:space="preserve">
+		<value>Mevcut Resim</value>
+	</data>
+
 	<data name="Email" xml:space="preserve">
 		<value>E-Posta</value>
+	</data>
+
+	<data name="FileModifyDate" xml:space="preserve">
+		<value>Dosya Düzenleme Tarihi</value>
+	</data>
+
+	<data name="FileName" xml:space="preserve">
+		<value>Dosya Adı</value>
+	</data>
+
+	<data name="FileSize" xml:space="preserve">
+		<value>Dosya Boyu</value>
 	</data>
 
 	<data name="FirstName" xml:space="preserve">
@@ -131,12 +147,20 @@
 		<value>Soyad</value>
 	</data>
 
+	<data name="NoFilesSelected" xml:space="preserve">
+		<value>Hiç Dosya Seçilmemiş!</value>
+	</data>
+
 	<data name="NotPicked" xml:space="preserve">
 		<value>Seçilmemiş</value>
 	</data>
 
 	<data name="Record" xml:space="preserve">
 		<value>Kayıt</value>
+	</data>
+
+	<data name="SelectedNewImage" xml:space="preserve">
+		<value>Seçili Resim</value>
 	</data>
 
 	<data name="Settings" xml:space="preserve">
